examples/nginx_auto_scaler/ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
      - nginx.quentin.k8s.osp.dev
      secretName: nginx
  rules:
    - host: nginx.quentin.k8s.osp.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
